# terminal-games

./: LICENSE  README.md  main.py  pyproject.toml
src/terminal_games/: common.py  config.py  entity.py  input.py  main.py  snake.py  space_invaders.py  visuals.py
